# Whisper

./: .gitignore  Cargo.toml  README.md
src/: main.rs  s3manager.rs  transcribe.rs
