[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.72"
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
aws-sdk-transcribe = "0.29.0"
bytes = "1.4.0"
chrono = "0.4.26"
hyper = "0.14.27"
infer = "0.15.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
reqwest = { version = "0.11.18", features = ["stream"] }
serde_json = "1.0.104"
teloxide = { version = "0.12.2"}
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.14"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = "2.4.0"
uuid = "1.4.1"

